# GatorFinder/Backend/routes/event_routes.go
@@ -15,4 +15,10 @@ func RegisterUserRoutes(router *mux.Router) {
 	router.HandleFunc("/users/add", controllers.AddUser).Methods("POST")
 	router.HandleFunc("/users/get", controllers.GetUsers).Methods("GET")
 	router.HandleFunc("/users/delete", controllers.DeleteUser).Methods("DELETE")
+
+}
+func RegisterLoginRoutes(router *mux.Router) {
+	router.HandleFunc("/login/requestOtp", controllers.CreateOtphandler).Methods("GET")
+	router.HandleFunc("/login/verifyOtp", controllers.VerifyOtpHandler).Methods("GET")
+
 }
